[package]
name = "starfield"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.24.0"
glam = "0.25.0"
fastrand = "2.0.0"
winapi = { version = "0.3", features = ["winuser", "windef"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.std]
opt-level = "z"
